--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
+    "axios": "^1.1.3",
+    "bootstrap": "^5.2.2",
+    "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
+    "jquery": "^3.6.1",
+    "popper.js": "^1.16.1",
     "roboto-fontface": "*",
+    "swiper": "^8.4.4",
     "vue": "^3.2.13",
+    "vue-axios": "^3.5.2",
     "vuetify": "^3.0.0-beta.0",
     "webfontloader": "^1.0.0"
   },
