--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "swiper": "^8.4.4",
     "vue": "^3.2.13",
     "vue-axios": "^3.5.2",
+    "vue-router": "^4.1.6",
     "vuetify": "^3.0.0-beta.0",
     "webfontloader": "^1.0.0"
   },
